# taupe

./: .flake8  .gitignore  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  codemeta.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.graphics/: README.md
exult/: __init__.py
taupe/: __init__.py  __main__.py  exit_codes.py
