# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created 2021-10-16
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/mhucka/taupe
# =============================================================================

[metadata]
name          = taupe
version       = 0.0.1
description   = Taupe: a tool to extract URLs from your personal Twitter archive
author        = Mike Hucka
author_email  = helpdesk@library.caltech.edu
license       = BSD 3-clause license
license_files = LICENSE
url           = https://github.com/mhucka/taupe
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/mhucka/taupe
  Bug Tracker = https://github.com/mhucka/taupe/issues
keywords      = Python, applications
classifiers   =
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.8
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
  taupe = taupe.__main__:console_scripts_main

[tool:pytest]
pythonpath = .

